# project_medecin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml  reference.md  requirements.txt
figures/: analysis_report.aux  analysis_report.out  analysis_report.tex
my_old_code/: explore_data.ipynb  first_preprocessing.py  preprocess_tobii_data.ipynb  preprocessing_pipeline.py
notebooks/: exemple_analyse.ipynb  first_model_boris_G.ipynb
scripts/: batch_process_example.py  run_analysis.py  run_patient_analysis.py
src/: batch_processing.py
src/boris_pipeline/: __init__.py  constants.py  loader.py  parser.py  postprocess.py  utils.py
src/boris_pipeline/analysis/: __init__.py  compare.py  metrics.py  plots.py  stats.py
src/integration/: __init__.py  alignment.py  cross_modal.py  epochs.py
src/tobii_pipeline/: __init__.py  class_processing_tobii.py  cleaner.py  loader.py  parser.py  postprocess.py  utils.py
src/tobii_pipeline/adapters/: __init__.py  mne_adapter.py  pymovements_adapter.py
src/tobii_pipeline/analysis/: __init__.py  compare.py  group_viz.py  metrics.py  plots.py  pub_plots.py  stats.py
tests/: conftest.py  test_adapters.py  test_boris_loader.py  test_boris_parser.py  test_boris_utils.py  test_cleaner.py  test_loader.py  test_metrics.py  test_parser.py  test_postprocess.py  test_stats.py  test_utils.py
