[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tobii_pipeline"
version = "0.1.0"
description = "Data pipeline for processing Tobii eye-tracking data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "pymovements>=0.19.0",
    "mne>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
    "ruff>=0.4.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tobii_pipeline"]

[tool.pylint.main]
py-version = "3.10"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments (common for flexible APIs)
    "R0917",  # too-many-positional-arguments
    "R0914",  # too-many-local-variables
    "R0911",  # too-many-return-statements
    "R0801",  # duplicate-code (column name lists are intentionally similar)
    "C0103",  # invalid-name (U for Mann-Whitney is standard notation)
    "C0415",  # import-outside-toplevel (circular import avoidance)
    "W0718",  # broad-exception-caught (acceptable for batch processing)
    "E1121",  # too-many-function-args (false positive with numpy)
]
